--- a/Soyvolon.Utilities/Soyvolon.Utilities.csproj
+++ b/Soyvolon.Utilities/Soyvolon.Utilities.csproj
@@ -1,8 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <PackageId>Soyvolon.DSharpPlus.SlashCommands</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Soyvolon</Authors>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+
+    <Title>Soyvolon's Utilities</Title>
+    <Description>A Collection of utilities created by Soyvolon</Description>
+    <RepositoryUrl>https://github.com/Soyvolon/Soyvolon.Utilities</RepositoryUrl>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <None Include="LICENSE" Pack="true" Visible="false" PackagePath="" />
+  </ItemGroup>
 </Project>
