--- a/Soyvolon.Utilities/Soyvolon.Utilities.csproj
+++ b/Soyvolon.Utilities/Soyvolon.Utilities.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <PackageId>Soyvolon.DSharpPlus.SlashCommands</PackageId>
+    <PackageId>Soyvolon.Utiltiies</PackageId>
     <Version>1.0.0</Version>
     <Authors>Soyvolon</Authors>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
