--- a/Soyovlon.Utilities/Soyovlon.Utilities.csproj
+++ b/Soyovlon.Utilities/Soyovlon.Utilities.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <PackageId>Soyvolon.Utiltiies</PackageId>
-    <Version>1.1.1</Version>
+    <Version>1.2.0</Version>
     <Authors>Soyvolon</Authors>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
 
@@ -13,8 +13,8 @@
     <RepositoryUrl>https://github.com/Soyvolon/Soyvolon.Utilities</RepositoryUrl>
   </PropertyGroup>
 
-
   <ItemGroup>
     <None Include="LICENSE" Pack="true" Visible="false" PackagePath="" />
   </ItemGroup>
+
 </Project>
