--- a/Soyvolon.Utilities.Tests/Soyvolon.Utilities.Tests.csproj
+++ b/Soyvolon.Utilities.Tests/Soyvolon.Utilities.Tests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Soyovlon.Utilities\Soyovlon.Utilities.csproj" />
+    <ProjectReference Include="..\Soyvolon.Utilities\Soyvolon.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
